# chemistry

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md
cmake/: build_test.cmake  unit_test.cmake
misc/mechanisms/gri3/: gri3.transport
misc/mechanisms/wesdry_ch4/: wesdry_ch4.cti
src/: CMakeLists.txt
src/Chemistry/: CMakeLists.txt
src/Chemistry/include/: chemistry_module.h
src/Chemistry/include/chemistry/: chemistry_module.h
src/Chemistry/src/: chemistry.c  chemistry_data.c  chemistry_io.c  chemistry_private.h  kinetics.c  mixture.c  state.c  thermo.c  transport.c
src/Chemistry/test/: chemistry.c  main.c
src/Reactor0D/: CMakeLists.txt
src/Reactor0D/include/: reactor0d_module.h
src/Reactor0D/include/chemistry/: reactor0d_module.h
src/Reactor0D/src/: reactor0d.c  reactor0d_private.h
src/Reactor0D/src/analyze/: analyze.c  analyze_module.h
src/Reactor0D/src/output/: output.c  output_module.h
src/Reactor0D/src/reactor/: reactor.c  reactor_module.h
src/Reactor0D/src/restart/: restart.c  restart_module.h
src/Reactor0D/src/timedisc/: timedisc.c  timedisc_module.h
src/Reactor0D/src/timedisc/explicit/: explicit.c  explicit_module.h
src/Reactor0D/src/timedisc/implicit/: implicit.c  implicit_module.h
tools/mechanisms/gri3/: gri3.cti  gri3.mech  gri3.mech.h5  test_gri3.py
tools/mechanisms/wesdry_ch4/: test_wesdry_ch4.py  wesdry_ch4.mech  wesdry_ch4.mech.h5  wesdry_ch4.thermo
tools/pyChemistry/: setup.py
tools/pyChemistry/pychemistry/: __init__.py  write.py
tools/pyChemistry/pychemistry/chemkin_parser/: __init__.py  parse_chemkin.py  parse_elements.py  parse_input.py  parse_mechanism.py  parse_reactions.py  parse_specii.py  parse_thermos.py  parse_transports.py
tools/pyChemistry/pychemistry/utilities/: __init__.py  base.py  constants.py  element.py  mechanism.py  reaction.py  species.py  thermo.py  transport.py  utilities.py
tools/pyChemistry/tests/: __init__.py  test_utilities.py
