####################################################################################################################################
# Chemistry - Finite rate chemistry library and solver
# (c) 2020 | Florian Eigentler
####################################################################################################################################

####################################################################################################################################
# Add subdirecotries
#-----------------------------------------------------------------------------------------------------------------------------------
add_subdirectory( Chemistry )
add_subdirectory( Reactor0D )

####################################################################################################################################
# Build target
#-----------------------------------------------------------------------------------------------------------------------------------

####################################################################################################################################
# Install target
#-----------------------------------------------------------------------------------------------------------------------------------